log
mi., 26 de mar. de 2025  9:07:09: 
 tests:  0|6
total_score: 0/70
25021aa
mi., 26 de mar. de 2025  9:07:22: 
 tests:  0|6
total_score: 0/70
c88d66d
mi., 26 de mar. de 2025  9:07:39: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:34:9: error: 'List {aka struct List}' has no member named 'size'
     list->size=0 ;
         ^~
Compilation failed
46f462d
mi., 26 de mar. de 2025  9:12:37: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c50bffa
mi., 26 de mar. de 2025  9:20:07: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
75c938a
mi., 26 de mar. de 2025  9:20:31: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:41:11: error: expected identifier before '*' token
     list->*current = list->head ;
           ^
Compilation failed
f0bc1e9
mi., 26 de mar. de 2025  9:22:06: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:42:5: error: expected expression before '[' token
     [
     ^
list.c:45:5: error: expected ';' before 'list'
     list->current = list->head ;
     ^~~~
Compilation failed
807115d
mi., 26 de mar. de 2025  9:22:17: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:42:5: error: expected expression before '[' token
     [
     ^
list.c:45:5: error: expected ';' before 'list'
     list->current = list->head ;
     ^~~~
Compilation failed
4657b93
mi., 26 de mar. de 2025  9:22:37: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
98f9291
mi., 26 de mar. de 2025  9:23:03: 
 list.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
38ef6da
mi., 26 de mar. de 2025  9:24:05: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b66c03b
mi., 26 de mar. de 2025  9:24:23: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
e085823
mi., 26 de mar. de 2025  9:26:51: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
6b4f5a3
